mscvt/src/mscvt_ros/log/build_2024-09-28_01-32-28/mscvt_ros/stdout_stderr.log
running egg_info
writing build/mscvt_ros/mscvt_ros.egg-info/PKG-INFO
writing dependency_links to build/mscvt_ros/mscvt_ros.egg-info/dependency_links.txt
writing entry points to build/mscvt_ros/mscvt_ros.egg-info/entry_points.txt
writing requirements to build/mscvt_ros/mscvt_ros.egg-info/requires.txt
writing top-level names to build/mscvt_ros/mscvt_ros.egg-info/top_level.txt
reading manifest file 'build/mscvt_ros/mscvt_ros.egg-info/SOURCES.txt'
writing manifest file 'build/mscvt_ros/mscvt_ros.egg-info/SOURCES.txt'
running build
running build_py
copying mscvt_ros/campus_map_publisher.py -> /home/parallels/Desktop/auto_assign1/cvt_as/mscvt/src/mscvt_ros/build/mscvt_ros/build/lib/mscvt_ros
copying mscvt_ros/bi_node.py -> /home/parallels/Desktop/auto_assign1/cvt_as/mscvt/src/mscvt_ros/build/mscvt_ros/build/lib/mscvt_ros
copying mscvt_ros/__init__.py -> /home/parallels/Desktop/auto_assign1/cvt_as/mscvt/src/mscvt_ros/build/mscvt_ros/build/lib/mscvt_ros
copying mscvt_ros/visitor_node.py -> /home/parallels/Desktop/auto_assign1/cvt_as/mscvt/src/mscvt_ros/build/mscvt_ros/build/lib/mscvt_ros
running install
running install_lib
copying /home/parallels/Desktop/auto_assign1/cvt_as/mscvt/src/mscvt_ros/build/mscvt_ros/build/lib/mscvt_ros/campus_map_publisher.py -> /home/parallels/Desktop/auto_assign1/cvt_as/mscvt/src/mscvt_ros/install/mscvt_ros/lib/python3.10/site-packages/mscvt_ros
byte-compiling /home/parallels/Desktop/auto_assign1/cvt_as/mscvt/src/mscvt_ros/install/mscvt_ros/lib/python3.10/site-packages/mscvt_ros/campus_map_publisher.py to campus_map_publisher.cpython-310.pyc
  File "/home/parallels/Desktop/auto_assign1/cvt_as/mscvt/src/mscvt_ros/install/mscvt_ros/lib/python3.10/site-packages/mscvt_ros/campus_map_publisher.py", line 5
    from ../../maps.coordinates import locations, edges
           ^
SyntaxError: invalid syntax

running install_data
copying resource/mscvt_ros -> /home/parallels/Desktop/auto_assign1/cvt_as/mscvt/src/mscvt_ros/install/mscvt_ros/share/ament_index/resource_index/packages
copying package.xml -> /home/parallels/Desktop/auto_assign1/cvt_as/mscvt/src/mscvt_ros/install/mscvt_ros/share/mscvt_ros
copying rviz_config.rviz -> /home/parallels/Desktop/auto_assign1/cvt_as/mscvt/src/mscvt_ros/install/mscvt_ros/share/mscvt_ros
running install_egg_info
removing '/home/parallels/Desktop/auto_assign1/cvt_as/mscvt/src/mscvt_ros/install/mscvt_ros/lib/python3.10/site-packages/mscvt_ros-0.0.0-py3.10.egg-info' (and everything under it)
Copying build/mscvt_ros/mscvt_ros.egg-info to /home/parallels/Desktop/auto_assign1/cvt_as/mscvt/src/mscvt_ros/install/mscvt_ros/lib/python3.10/site-packages/mscvt_ros-0.0.0-py3.10.egg-info
running install_scripts
Installing campus_map_publisher script to /home/parallels/Desktop/auto_assign1/cvt_as/mscvt/src/mscvt_ros/install/mscvt_ros/lib/mscvt_ros
writing list of installed files to '/home/parallels/Desktop/auto_assign1/cvt_as/mscvt/src/mscvt_ros/build/mscvt_ros/install.log'
